turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:7: error: not found: value setCouleurBrosse
	setCouleurBrosse(Color.RED);
        ^Source:9: error: not found: value setCouleurBrosse
	setCouleurBrosse(Color.YELLOW);
        ^Source:11: error: not found: value setCouleurBrosse
	setCouleurBrosse(Color.PINK);
        ^