turtleart.lessons.turtleart.Main.DiskFour.scala.code

override def run() {


	gribouille();
	setCouleurBrosse(Color.RED);
	gribouille();
	setCouleurBrosse(Color.YELLOW);
	gribouille();
	setCouleurBrosse(Color.PINK);
	gribouille();
}
def gribouille(){
		baisseCrayon();
for(i <- 1 to 90)
{
	avance(100);
	recule(100);
	droite(1);
}
}

